--- a/s3-proxy/justfile
+++ b/s3-proxy/justfile
@@ -1,4 +1,10 @@
-set dotenv-load
+set export
+
+AWS_ACCESS_KEY_ID := "AKIDEXAMPLE"
+AWS_SECRET_ACCESS_KEY := "wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY"
+AWS_REGION := "us-west-dummy"
+
+# set dotenv-load
 
 list:
   just --list
@@ -16,7 +22,7 @@ run-registry:
   docker run -p 5000:5000 --network=host \
     -e REGISTRY_STORAGE=s3 \
     -e REGISTRY_STORAGE_S3_BUCKET=image-bucket \
-    -e REGISTRY_STORAGE_S3_REGIONENDPOINT=http://localhost:8000 \
+    -e REGISTRY_STORAGE_S3_REGIONENDPOINT=http://localhost:8002 \
     -e REGISTRY_STORAGE_S3_REGION=us-west-2 \
     -e REGISTRY_STORAGE_S3_SECURE=false \
     -e REGISTRY_STORAGE_S3_V4AUTH=false \
@@ -44,10 +50,21 @@ run-registry-local-s3:
     -e REGISTRY_STORAGE_REDIRECT_DISABLE=true \
     registry:2
 
+install-local-s3:
+  cargo install \
+    --git https://github.com/Nugine/s3s.git \
+    --rev e8bba54fe291664f73566235354002eb02002a75 \
+    --bin s3s-fs \
+    --features="binary" \
+    s3s-fs
+
+_check-local-s3:
+  which s3s-fs || (echo "s3s-fs not installed, run `just install-local-s3`" && exit 1)
+
 clean-local-s3:
   rm -rf /tmp/s3-local-cache
 
-run-local-s3:
+run-local-s3: _check-local-s3
   mkdir -p /tmp/s3-local-cache
   # RUST_LOG="s3s::service=DEBUG,s3s_fs=DEBUG" s3s-fs --host localhost --port 8014 --access-key $AWS_ACCESS_KEY_ID --secret-key $AWS_SECRET_ACCESS_KEY /tmp/s3-local-cache
   RUST_LOG="s3s_fs=DEBUG" s3s-fs --host localhost --port 8014 --access-key $AWS_ACCESS_KEY_ID --secret-key $AWS_SECRET_ACCESS_KEY --domain-name localhost:8014 /tmp/s3-local-cache
@@ -88,7 +105,7 @@ run-sample-pull:
   docker image rm localhost:5000/alpine
   docker pull localhost:5000/alpine
 
-s3-args := "--endpoint-url http://localhost:8000 --no-verify-ssl --no-sign-request"
+s3-args := "--endpoint-url http://127.0.0.1:8002 --no-verify-ssl --no-sign-request"
 
 run-cli-put:
   aws s3api {{s3-args}} put-object --bucket image-bucket --key readme-2 --body "./README.md"
@@ -104,12 +121,12 @@ run-cli-get:
 
 run-cli-multipart:
   aws s3api {{s3-args}} create-multipart-upload --bucket image-bucket --key readme-3 | jq -r '.UploadId' > /tmp/upload-id
-  aws s3api {{s3-args}} upload-part --bucket image-bucket --key readme-3 --part-number 1 --body README.md --upload-id $(cat /tmp/upload-id) | jq -r '.Etag' > /tmp/etag-1
-  aws s3api {{s3-args}} upload-part --bucket image-bucket --key readme-3 --part-number 2 --body README.md --upload-id $(cat /tmp/upload-id) | jq -r '.Etag' > /tmp/etag-2
-  aws s3api {{s3-args}} complete-multipart-upload --bucket image-bucket --key readme-3 --multipart-upload Parts=[{ETag=$(cat /tmp/etag-1),PartNumber=1},{ETag=$(cat /tmp/etag-2),PartNumber=2}] --upload-id $(cat /tmp/upload-id)
+  aws s3api {{s3-args}} upload-part --bucket image-bucket --key readme-3 --part-number 1 --body README.md --upload-id $(cat /tmp/upload-id) | jq -r '.ETag' > /tmp/ETag-1
+  aws s3api {{s3-args}} upload-part --bucket image-bucket --key readme-3 --part-number 2 --body README.md --upload-id $(cat /tmp/upload-id) | jq -r '.ETag' > /tmp/ETag-2
+  aws s3api {{s3-args}} complete-multipart-upload --bucket image-bucket --key readme-3 --multipart-upload "Parts=[{ETag=$(cat /tmp/ETag-1),PartNumber=1},{ETag=$(cat /tmp/ETag-2),PartNumber=2}]" --upload-id $(cat /tmp/upload-id)
 
 run-skystore-server:
-  cd ../skystore-server && just clean && just run
+  cd ../store-server && just clean && just run
 
 purge-buckets:
   az storage blob delete-batch --account-key $STORAGE_ACCESS_KEY --account-name $STORAGE_ACCOUNT --source sky-s3-backend
