--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -18,11 +18,12 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          cd store-server && pip install -r requirements.txt
+          cd store-server
+          pip install -r requirements.txt
       - name: Lint
         run: |
           pip install black ruff
-          cd store-server && black --check .
-          cd store-server && ruff check
+          black --check .
+          ruff check
       - name: Test
-        run: cd store-server && just test
+        run: just test
