--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -14,6 +14,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - name: Set up Python 3.8
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.8
       - name: Set up cargo cache
         uses: actions/cache@v3
         continue-on-error: false
@@ -29,8 +33,12 @@ jobs:
       - name: Install dev depedencies
         run: cargo install just
       - name: Build
-        run: cd s3-proxy && cargo build --verbose
+        run: cd s3-proxy && cargo build
       - name: Lint
         run: cd s3-proxy && cargo fmt --check && cargo clippy -- -D warnings
+      - name: Install Test Dependencies
+        run: |
+          pushd s3-proxy && just install-local-s3 && popd
+          pushd store-server && pip install -r requirements.txt && popd
       - name: Test
         run: cd s3-proxy && just run-unit-test-once
