install just for py

--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -27,4 +27,6 @@ jobs:
           black --check .
           ruff check .
       - name: Test
-        run: cd store-server && just test
+        run: |
+          cargo install just
+          cd store-server && just test
