add bucket ops for now

--- a/s3-proxy/justfile
+++ b/s3-proxy/justfile
@@ -13,7 +13,7 @@ test:
   cargo test skyproxy
 
 run:
-  RUST_LOG=INFO cargo run
+  RUST_LOG=INFO RUST_BACKTRACE=full cargo run
 
 run-release:
   RUST_LOG=INFO cargo run --release
@@ -21,7 +21,7 @@ run-release:
 run-registry:
   docker run -p 5000:5000 --network=host \
     -e REGISTRY_STORAGE=s3 \
-    -e REGISTRY_STORAGE_S3_BUCKET=my-bucket-1 \
+    -e REGISTRY_STORAGE_S3_BUCKET=example-test-bucket \
     -e REGISTRY_STORAGE_S3_REGIONENDPOINT=http://localhost:8002 \
     -e REGISTRY_STORAGE_S3_REGION=us-west-2 \
     -e REGISTRY_STORAGE_S3_SECURE=false \
@@ -65,23 +65,32 @@ run-sample-pull:
 
 s3-args := "--endpoint-url http://127.0.0.1:8002 --no-verify-ssl --no-sign-request"
 
+run-cli-create-bucket:
+  aws s3api {{s3-args}} create-bucket --bucket example-test-bucket
+
+run-cli-delete-bucket:
+  aws s3api {{s3-args}} delete-bucket --bucket example-test-bucket
+
+run-cli-list-buckets:
+  aws s3api {{s3-args}} list-buckets
+  
 run-cli-put:
-  aws s3api {{s3-args}} put-object --bucket my-bucket-1 --key readme-2 --body "./README.md"
+  aws s3api {{s3-args}} put-object --bucket example-test-bucket --key readme-2 --body "./README.md"
 
 run-cli-list:
-  aws s3api {{s3-args}} list-objects --bucket my-bucket-1
+  aws s3api {{s3-args}} list-objects --bucket example-test-bucket
 
 run-cli-get:
   rm readme-2 || true
-  aws s3api {{s3-args}} get-object --bucket my-bucket-1 --key readme-2 readme-2
+  aws s3api {{s3-args}} get-object --bucket example-test-bucket --key readme-2 readme-2
   cat readme-2
   rm readme-2
 
 run-cli-multipart:
-  aws s3api {{s3-args}} create-multipart-upload --bucket my-bucket-1 --key readme-3 | jq -r '.UploadId' > /tmp/upload-id
-  aws s3api {{s3-args}} upload-part --bucket my-bucket-1 --key readme-3 --part-number 1 --body README.md --upload-id $(cat /tmp/upload-id) | jq -r '.ETag' > /tmp/ETag-1
-  aws s3api {{s3-args}} upload-part --bucket my-bucket-1 --key readme-3 --part-number 2 --body README.md --upload-id $(cat /tmp/upload-id) | jq -r '.ETag' > /tmp/ETag-2
-  aws s3api {{s3-args}} complete-multipart-upload --bucket my-bucket-1 --key readme-3 --multipart-upload "Parts=[{ETag=$(cat /tmp/ETag-1),PartNumber=1},{ETag=$(cat /tmp/ETag-2),PartNumber=2}]" --upload-id $(cat /tmp/upload-id)
+  aws s3api {{s3-args}} create-multipart-upload --bucket example-test-bucket --key readme-3 | jq -r '.UploadId' > /tmp/upload-id
+  aws s3api {{s3-args}} upload-part --bucket example-test-bucket --key readme-3 --part-number 1 --body README.md --upload-id $(cat /tmp/upload-id) | jq -r '.ETag' > /tmp/ETag-1
+  aws s3api {{s3-args}} upload-part --bucket example-test-bucket --key readme-3 --part-number 2 --body README.md --upload-id $(cat /tmp/upload-id) | jq -r '.ETag' > /tmp/ETag-2
+  aws s3api {{s3-args}} complete-multipart-upload --bucket example-test-bucket --key readme-3 --multipart-upload "Parts=[{ETag=$(cat /tmp/ETag-1),PartNumber=1},{ETag=$(cat /tmp/ETag-2),PartNumber=2}]" --upload-id $(cat /tmp/upload-id)
 
 run-skystore-server:
   cd ../store-server && just clean && just run
