--- a/store-server/justfile
+++ b/store-server/justfile
@@ -23,6 +23,9 @@ run:
 test args='': clean
     pytest -v -s --show-capture=no . {{args}}
 
+test-register:
+    python register_test.py
+    
 dump:
     sqlite3 skystore.db .dump
 
