--- a/store-server/justfile
+++ b/store-server/justfile
@@ -23,7 +23,7 @@ run:
 test args='': clean
     pytest -v -s --show-capture=no . {{args}}
 
-test-register:
+register-config:
     python register.py
 
 dump:
