--- a/s3-proxy/justfile
+++ b/s3-proxy/justfile
@@ -1,5 +1,6 @@
 set export
 
+# Set this before running test 
 AWS_ACCESS_KEY_ID := "AKIDEXAMPLE"
 AWS_SECRET_ACCESS_KEY := "wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY"
 AWS_REGION := "us-west-dummy"
