--- a/s3-proxy/Cargo.toml
+++ b/s3-proxy/Cargo.toml
@@ -39,3 +39,4 @@ hex = "0.4.3"
 google-cloud-storage = "0.11.0"
 google-cloud-default = { version = "0.2.0", features = ["storage"] }
 futures-lite = "1.13.0"
+percent-encoding = "2.1.0"
