refactor head_object and upload

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 .vscode
 target/
-
+*ipynb 
 # Created by https://www.toptal.com/developers/gitignore/api/rust,macos,python
 # Edit at https://www.toptal.com/developers/gitignore?templates=rust,macos,python
 
