add range copy feature to upload_part_copy function in s3-proxy

--- a/s3-proxy/justfile
+++ b/s3-proxy/justfile
@@ -1,9 +1,9 @@
 set export
 
 # Set this before running test 
-AWS_ACCESS_KEY_ID := "AKIDEXAMPLE"
-AWS_SECRET_ACCESS_KEY := "wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY"
-AWS_REGION := "us-west-dummy"
+# AWS_ACCESS_KEY_ID := "aws_access_key_id_dummy"
+# AWS_SECRET_ACCESS_KEY := "aws_secret_access_key_dummy"
+# AWS_REGION := "us-west-dummy"
 
 # set dotenv-load
 
@@ -39,7 +39,7 @@ run-registry:
 install-local-s3:
   cargo install --force \
     --git https://github.com/Nugine/s3s.git \
-    --rev 210616177344d295f987c594ce6012f76e4597eb \
+    --rev a873960e7cd6f4c3428150d5902bcba3744d7285 \
     --bin s3s-fs \
     --features="binary" \
     s3s-fs
