add hosted test

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@ target/
 # Created by https://www.toptal.com/developers/gitignore/api/rust,macos,python
 # Edit at https://www.toptal.com/developers/gitignore?templates=rust,macos,python
 
+# ssh 
+ssh_*
+
 ### macOS ###
 # General
 .DS_Store
