fix gcp bugs create_bucket & multipart_many_parts & import azure and Nugine sdk pr &  change based on comments

--- a/s3-proxy/justfile
+++ b/s3-proxy/justfile
@@ -38,8 +38,8 @@ run-registry:
 
 install-local-s3:
   cargo install --force \
-    --git https://github.com/SongShaopu1998/s3s \
-    --rev 8381a9a6347d71dd2471a46c67ccfa95837b8cd3 \
+    --git https://github.com/Nugine/s3s \
+    --rev 0cc49cf24c05eeb6a809882d1a7b76e953822c0d \
     --bin s3s-fs \
     --features="binary" \
     s3s-fs
